--- a/musicstylesheet.css
+++ b/musicstylesheet.css
@@ -14,43 +14,34 @@
   background-color: #555;
 }
 
-.hidden { visibility: hidden; }
-.unhidden { visibility: visible; }
-
 #grad1 {
-  height: 2000px;
-  background-color: lavender;
-  background-image: linear-gradient(lavender, lightseagreen); /* Standard syntax (must be last) */
+  height: 4000px;
+  background-color: lightblue;
+  background-image: linear-gradient(lightblue, violet, lightpink); /* Standard syntax (must be last) */
         }
-        h1 {
-          color: white;
-          text-align: center;
-          font-family: Georgia, Times, serif;
-          font-size: 45px;
-            }
-        h2 {
-          color: darkblue;
-          text-align: center;
-          font-family:  "Lucida Console", monospace;
-          font-size: 20px;}
-          h3 {
-            color: purple;
-            text-align: center;
-            font-family:  Verdana, Times, serif;
-            font-size: 15px;
-            }
+        ul.a {
+          list-style-position: outside;
+          position: relative;
+          left: 250px;
+              }
+              h1 {
+                color: white;
+                text-align: center;
+                font-family: Georgia, Times, serif;
+                font-size: 45px;
+                  }
+              h2 {
+                color: darkblue;
+                text-align: center;
+                font-family:  "Lucida Console", monospace;
+                font-size: 30px;}
+              h3 {
+                color: purple;
+                font-family:  Verdana, Times, serif;
+                }
+              .button:hover {
 
-          .button:hover {
-
-            box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-            color: blue;
-          }
-            a {color: hotpink}
-
-
-            #myDIV {
-              width: 100%;
-              padding: 50px 0;
-              text-align: center;
-              margin-top: 20px;
-            }
+                box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+                color: blue;
+              }
+                a {color: hotpink}
