add text-align: center to list

--- a/musicstylesheet.css
+++ b/musicstylesheet.css
@@ -23,6 +23,7 @@
           list-style-position: outside;
           position: relative;
           left: 250px;
+          text-align: center;
               }
               h1 {
                 color: white;
